feat(backend/frontend/client-proxy): add invariants
